add views and template done

--- a/core/templates/core/home_app.html
+++ b/core/templates/core/home_app.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1>Bienvenue à la Médiathèque</h1>
+  <p>Pour accéder aux services veuillez vous connecter</p>
   <p>Accédez à votre espace :</p>
   <p>
     <a href="#">Espace membre (connexion)</a> |
