--- a/member/templates/member/medias_list.html
+++ b/member/templates/member/medias_list.html
@@ -5,6 +5,31 @@
     <title>Liste des médias</title>
 </head>
 <body>
-    <h1>Liste des Médias</h1>
+    <h1>Liste des médias</h1>
+    <h2>Livres</h2>
+    {% for livre in livres %}
+    <ul>
+        <li>{{ livre.titre }} - {{ livre.auteur }}</li>
+    </ul>
+    {% endfor %}
+    <h2>DVD</h2>
+    {% for dvd in dvds %}
+    <ul>
+        <li>{{ dvd.titre }} - {{ dvd.realisateur }}</li>
+    </ul>
+    {% endfor %}
+    <h2>CD</h2>
+    {% for cd in cds %}
+    <ul>
+        <li>{{ cd.titre }} - {{ cd.artiste }}</li>
+    </ul>
+    {% endfor %}
+    <h2>Jeux de plateau</h2>
+    {% for jeudeplateau in jeudeplateaus %}
+    <ul>
+        <li>{{ jeudeplateau.titre }} - {{ jeudeplateau.createur }}</li>
+    </ul>
+    {% endfor %}
+    <p><a href="{% url 'core:home' %}">Se déconnecter</a></p>
 </body>
 </html>
